# nix-snow

./: Cargo.toml  flake.nix  fleet.toml  rustfmt.toml
.cargo/: config.toml
.direnv/: flake-profile-1-link
src/: main.rs
src/modes/: add.rs  remove.rs
